# cf-utils

./: .gitignore  Makefile  README.md  cf.py  pyproject.toml  requirements.txt  test.bash
tests/: c.cpp  d.cpp
